--- a/index.css
+++ b/index.css
@@ -8,22 +8,33 @@ body, html {
 }
 
 :root {
-    --swiper-theme-color: #EB5C3B;;
+    --swiper-theme-color: #EB5C3B;
+}
+
+.swiper-pagination-bullet {
+    opacity: 1;
+    background: #EDEDED;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #EB5C3B;
 }
 
 .main {
     width: 100%;
     max-width: 700px;
     margin: 0 auto;
+    position: relative;
 }
 
 .bottom-logo {
 
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     display: flex;
     justify-content: center;
+    opacity: 0.8;
 }
 
 .bottom-logo img {
@@ -52,11 +63,8 @@ h3 {
     width: 120px;
 }
 
-
 .section.swipe {
-
     overflow: hidden;
-    /*height: 500px;*/
 }
 
 .section.content {
@@ -82,7 +90,7 @@ h3 {
 }
 
 .address {
-
+    min-width: 12rem;
 }
 
 .strpeni {
@@ -113,6 +121,43 @@ h3 {
 
 .aspect-ratio-container .aspect-ratio-content img {
     width: 100%;
+}
+
+.divider {
+    display: none;
+}
+
+@media only screen and (max-width: 800px) {
+
+    body {
+        padding-bottom: 8rem;
+    }
+    .section.content .content-item {
+        max-width: 220px;
+        margin: 0 auto;
+    }
+
+    .section.content,
+    .section.content .content-item,
+    .section.content .content-item-item {
+        display: block;
+    }
+
+    .content-item-item {
+        padding-bottom: 2rem;
+    }
+
+    .divider {
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #EDEDED;
+        margin: 3rem 0;
+    }
+
+    .section.header {
+        padding: 1rem 2rem;
+    }
 }
 
 
