--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ body, html {
 }
 
 h3 {
+    margin-top: 0;
     color: #EB5C3B;
 }
 
@@ -80,6 +81,10 @@ h3 {
     justify-content: center;
     align-items: center;
     height: 4rem;
+}
+
+.sssss {
+    width: 100%;
 }
 
 /*SWIPER*/
