--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ h3 {
 
 
 .aspect-ratio-container {
-    background-color: red;
+    background-color: #eeeeee;
     width: 100%;
     padding-top: 65%;
     /*padding-top: 100%; !* 1:1 Aspect Ratio *!*/
