--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body, html {
 
 .main {
     width: 100%;
-    max-width: 700px;
+    max-width: 1168px;
     margin: 0 auto;
     position: relative;
 }
@@ -40,7 +40,6 @@ body, html {
 .bottom-logo img {
     width: 100%;
     max-width: 400px;
-
 }
 
 h3 {
@@ -150,11 +149,33 @@ h3 {
     display: none;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-height: 1200px) {
+
+    .main {
+        max-width: 960px;
+    }
+}
+
+@media only screen and (max-height: 800px) {
+
+    .main {
+        max-width: 680px;
+    }
+}
+
+@media only screen and  (max-height: 640px) {
+
+    .main {
+        max-width: 440px;
+    }
+}
+
+@media only screen and (max-width: 800px), (max-height: 640px) {
 
     body {
         padding-bottom: 8rem;
     }
+
     .section.content .content-item {
         max-width: 220px;
         margin: 0 auto;
@@ -182,5 +203,6 @@ h3 {
         padding: 1rem 2rem;
     }
 }
+
 
 
