--- a/index.css
+++ b/index.css
@@ -25,12 +25,12 @@ body, html {
     background-color: #EB5C3B;
 }
 
-.main {
-    width: 100%;
-    max-width: 1168px;
-    margin: 0 auto;
-    position: relative;
-}
+/*.main {*/
+/*    width: 100%;*/
+/*    max-width: 1168px;*/
+/*    margin: 0 auto;*/
+/*    position: relative;*/
+/*}*/
 
 .bottom-logo {
 
