--- a/ArtEcoNew/public/global.css
+++ b/ArtEcoNew/public/global.css
@@ -2,12 +2,19 @@ html, body {
     font-family: 'MarianinaFY', monospace;
     font-weight: bold;
     font-style: normal;
-    color: #1E1E1C;
     margin: 0;
     padding: 0;
     position: relative;
     width: 100%;
     height: 100%;
+    font-size: 18px;
+    color: #ababab;
+
+
+}
+html{
+
+    overflow: scroll;
 }
 
 /*body {*/
